# ai-council

./: .env.example  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  TODO.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/: azure-foundry-v1.md
src/council/: agent.py  config.py  debate.py  llm.py  memory.py  synthesis.py  ui.py
