[project]
name = "ai-council"
version = "0.1.0"
description = "Multi-agent AI council for decision making"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
]

[project.scripts]
council = "council:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
